welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: '=' expected but ';' found.
  var h=getMondeHauteur
^